--- a/marginal-distributions.Rmd
+++ b/marginal-distributions.Rmd
@@ -9,6 +9,8 @@ distribution of $X$ alone?
 
 ## Theory {-}
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/qzf5X103oZA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 Recall from Lesson \@ref(rv) that the p.m.f. of $X$ is defined to be $P(X = x)$ as a function of $x$. 
 To calculate a probaebility from a joint p.m.f., we sum over the relevant outcomes. 
 In this case, we need to sum the joint p.m.f. over all the possible values of $y$ for the 
@@ -164,5 +166,5 @@ Let $X$ be the number of $\fbox{1}$s on the first draw and $Y$ be the number of 
 It is clear that the first draw has a $\frac{N_1}{N}$ probability of being a $\fbox{1}$. But what about the 
 second draw?
 
-In Lesson \@ref(joint-discrete), you found the joint distribution of $X$ and $Y$. Use this joint p.m.f. to show 
+    In Lesson \@ref(joint-discrete), you found the joint distribution of $X$ and $Y$. Use this joint p.m.f. to show 
 that the probability that the second draw is a $\fbox{1}$ is $\frac{N_1}{N}$.
